--- a/templates/display.html
+++ b/templates/display.html
@@ -7,7 +7,7 @@
     <title>Title</title>
 </head>
 <body bgcolor="#add8e6">
-<center><h1>Employee Details</h1></center>
+<center><h1>Employees Details</h1></center>
 <!--<Div><img style="background-size: cover; background-position: center; background-attachment: fixed; margin-bottom: -380px; height: 550px; width: 100%;"  src="{% static 'display2.jpg' %}" alt="My image"></div>-->
 <form class="form-inline my-2 my-lg-0 " align="center" style="background-position: right">
     <input class="form-control mr-sm-2 " style="background-color: snow" name="q" type="search" placeholder="Search" aria-label="Search">
